# code

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix
asm/testing/: hello.asm  justfile  test.s  with_gcc.s
c/basic/: Makefile  fib  fib.c  flake.nix
c/c4/: justfile
c/regex/: flake.nix
c/speed/: makefile  shift_v_cmp  shift_v_cmp.c
c/test_premake/: Makefile  PremakeTesting.make  premake5.lua
c/u4/: main.c
elixir/basic/: Elixir.Math.beam  basic.exs  csv.exs  cumcsv.py  fbgdjkl.exs  joe.txt  math.exs
elixir/mix_test/: mix.exs
elixir/nix_test/: flake.nix
haskell/basic/: basic.cabal  package.yaml
idris/basic/: Main.idr  mypkg.ipkg
multi-lang/booru/py/: pyproject.toml
multi-lang/booru/py/booru/: api.py
multi-lang/olaf_day2_speed/: README.md  olaf.nim  olaf2.nim  olaf3.nim  olaf4.nim  olaf5.nim  olaf6.nim  starr.zig  starr2.zig  starr3.zig  starr4.zig  starr5.zig
multi-lang/speed_tests/: README.md
nim/imhex_plugin_test/: README.md  flake.nix  imhex_plugin_test.hexplug  imhex_plugin_test.nim  imhex_plugin_test.nimble  justfile  nim.cfg  test  test.nim
nim/imhex_zlib/: README.md  imhex_zlib.nimble  justfile  nim.cfg  scratch
nix/c/: configure.ac
nix/cmake/: CMakeLists.txt
nix/derivation_testing/: builder.sh  default.nix
nix/gnu_autotools/: flake.nix  justfile
python/: aiomonitor_wizwalker_test.py
python/aes_tests/: pyproject.toml  test_aes.py
python/async_chain/: main.py  replace_task_factory.py  subclass_task.py  test_chain.py
python/async_hotkeys/: keycodes.py  main.py
python/async_socket/: main.py
python/async_testing/: main.py
python/beanie_testing/: main.py  pyproject.toml
python/bf2c/: bf  bf.c  bf.py  pyproject.toml
python/bytecode/: main.py
python/cloc/: __main__.py
python/cmd2_testing/: example.py  main.py
python/cnon_testing/: main.py  words.txt
python/codon_tests/: main.ll  main.py
python/csv_chunker/: 0.csv  1.csv  2.csv  3.csv  chunker.py  test.csv
python/dir_compare/: dir_compare.py
python/discord_krisp_patcher/: main.py  pyproject.toml
python/eso/: main.py
python/generics/: basic.py  (+5 more)
python/json_vs_sqlite/: datagen.py  makefile  pyproject.toml  test_json.py  test_sqlite.py
python/minecraft_status/: pyproject.toml
python/minecraft_status/minecraft_status/: __main__.py
python/olaf_discord_files/: pyproject.toml
python/olaf_discord_files/olaf_discord_files/: __main__.py
python/wizproxy/: info.txt  pyproject.toml
python/wizproxy/tests/: test_wizmsg.py
python/wizproxy/wizproxy/: __main__.py
(+198 files in other folders)
