[tool.poetry]
name = "json-vs-sqlite"
version = "0.1.0"
description = ""
authors = ["StarrFox <starrfox6312@gmail.com>"]
readme = "README.md"
packages = [{include = "json_vs_sqlite"}]

[tool.poetry.dependencies]
python = "^3.10"
orjson = "^3.8.3"
scalene = "^1.5.16"
python-rapidjson = "^1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
