[tool.poetry]
name = "minecraft-status"
version = "0.1.0"
description = ""
authors = ["StarrFox <starrfox6312@gmail.com>"]
readme = "README.md"
packages = [{include = "minecraft_status"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
