[tool.poetry]
name = "booru"
version = "0.1.0"
description = ""
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
